# gitvulture

./: .dockerignore  Dockerfile  INSTALL_AND_USAGE.md  README.md  USAGE.md  install.bat  install.ps1  install.sh  pyproject.toml  setup.py
.emergent/: emergent.yml
backend/: server.py
backend/tests/: test_c3_c7_c9.py  test_cicd_secrets.py  test_graph_handlers.py  test_l3_d2.py  test_observability_and_checkpoint.py  test_pack_listing_fallback.py  test_scope_and_smart.py  test_worklist.py
docs/: architecture-diagram.html
frontend/src/: App.css  App.js  index.css
gitexpose/: __init__.py  __main__.py  banner.py  cli.py  http_client.py  logger.py  settings.py
gitexpose/core/: detector.py  dumper.py  extractor.py  index.py  objects.py  pack.py  refs.py  secrets.py
gitexpose/reporters/: __init__.py
gitvulture/: __init__.py  bypass_library.py  cli.py  config.py  interactive.py  logger.py  report_html.py  storage.py
gitvulture/ai/: exploit_roadmap.py  forgery_lab.py  triage.py
gitvulture/core/: aggressive.py  cicd_secrets.py  cloud_enum.py  crypto_attack.py  endpoint_discovery.py  escalation.py  escalation_data.py  git_pivots.py  graph_driver.py  graph_handlers.py  http_client.py  index_parser.py  jwt_forge.py  live_diff.py  object_engine.py  orchestrator.py  origin_finder.py  recon.py  reconstructor.py  ref_discovery.py  s3_enum.py  scope_guard.py  smart_http.py  sqli_probe.py  webdav.py  worklist.py
gitvulture/sast/: __init__.py
gitvulture/secrets/: exporter.py  git_walker.py  (+2 more)
memory/: ARCHITECTURE.md  PRD.md
scripts/: auth_brute.py  jwt_forge_attack.py
(+3 files in other folders)
